<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.it.hueic.nghiencuukhoahochueic.view.DetailNotificationActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar"/>
    <LinearLayout
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/bottom_navigtaion"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_Title"
            android:layout_margin="16dp"
            android:layout_below="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="8dp">
                <TextView
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/tittle_string"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <EditText
                    android:id="@+id/edTittle"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:hint="@string/this_is_title"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_Content"
            android:layout_margin="16dp"
            android:layout_below="@+id/cardView_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="8dp">
                <TextView
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <EditText
                    android:id="@+id/edContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:inputType="text|textMultiLine"
                    android:gravity="top"
                    android:hint="@string/this_is_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigtaion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@drawable/nav_item_color_state"
        app:itemTextColor="@drawable/nav_item_color_state"
        app:menu="@menu/bottom_navigation_details" />
</RelativeLayout>
